@@ -4,7 +4,7 @@
 #
 #      JFFS2 Filesystem configuration data
 #
-#      $Id: jffs2.cdl,v 1.15 2004/04/21 18:50:52 gthomas Exp $
+#      $Id: jffs2.cdl,v 1.16 2004/11/11 20:48:54 lunn Exp $
 #
 # ====================================================================
 #####ECOSGPLCOPYRIGHTBEGIN####
