@@ -1,4 +1,4 @@
-$Id: TODO.eCos,v 1.4 2003/11/28 11:15:56 dwmw2 Exp $
+$Id: TODO.eCos,v 1.2 2003/11/28 11:15:56 dwmw2 Exp $
 
  - Make symlinks work properly.
 
