@@ -1,3 +1,12 @@
+2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>
+
+	* Merge from public MTD.
+	
+2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>
+
+	* src/build.c: Removed Oyvind Harboe's patch from 2004-04-19 
+	since it was rejected upstream.
+	
 2004-10-20  Per Hedblom  <perhedblom@abem.se>
 
 	* src/fs-ecos.c (jffs2_open): Call iput on dir node if
